styles.css
h1, h2, p, li, ul{
    text-align: center;
    color: greenyellow;
}

p {
    width: 60%;
    align-self: auto;
}

body {
    background-color: grey;
}

ul { 
	list-style-type: none; 
	padding: 0; 
} 

.li-unordered::before {
    content: '• '; 
}

.imgBox {
    margin: 25%;
    align-self: auto;
}

